--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,9 @@ h1 {
     text-align: center;
     margin: 100px auto 20px auto; */
 }
+h2{
+    text-align: center;
+}
 
 @media screen and (max-width: 800px){
   body{
